--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "autoload": {
     	"psr-4": {
-    		"fwcms\\": "vendor/fwcms",
+    		"fwcms\\": "vendor/fwcms/core",
     		"app\\": "app"
     	}
     },
